syntax = "proto3";
package proto;
option go_package = ".;proto";


message Vector2{
    float X = 1;
    float Y = 2;
}

